test/functions/vass/resolution/param-detuple.prediff
#!/bin/bash

cat $2 | sed s@ChapelBase.chpl:..:@ChapelBase.chpl:@ > $2.tmp
mv $2.tmp $2
